src/objects/RMProject__c.object
<CustomObject>
    <fields>
        <fullName>Configuration_Signoff__c</fullName>
        <label>Configuration Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Configuration_Start__c</fullName>
        <label>Configuration Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Map_Signoff__c</fullName>
        <label>Data Map Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Migration_Signoff__c</fullName>
        <label>Data Migration Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Data_Migration_Start__c</fullName>
        <label>Data Migration Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliverables_Due__c</fullName>
        <inlineHelpText>Date Client is required to deliver example reports, process documentation, etc for an on-time design delivery.</inlineHelpText>
        <label>Deliverables Due</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Designer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Designer</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Final_Design_Delivery__c</fullName>
        <label>Final Design Delivery</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Design_Review__c</fullName>
        <label>Initial Design Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Kickoff_Date__c</fullName>
        <label>Kickoff Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Projects</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quality_Control__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Quality Control</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RMA_Handoff__c</fullName>
        <inlineHelpText>Date project is handed to PM/configuration</inlineHelpText>
        <label>RMA Handoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SOW_Signed__c</fullName>
        <label>SOW Signed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_End__c</fullName>
        <label>Support End</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Support_Start__c</fullName>
        <label>Support Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Testing_Signoff__c</fullName>
        <label>Testing Signoff</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Testing_Start__c</fullName>
        <label>Testing Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Testing_Complete__c</fullName>
        <label>User Testing Complete</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_Walk_Through__c</fullName>
        <label>User Walk Through</label>
        <type>Date</type>
    </fields>
    <label>Project_Old</label>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Projects_Old</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>